# elastic-dac-implementation

./: .env.example  README.md  demo-script.md  pyproject.toml
customers/customer-a/: config.yaml  in-scope-rules.yaml
customers/demo/: config.yaml  in-scope-rules.yaml
data/: rule.esql  true-negative.json  true-positive.json
examples/github-workflows/: deploy.yaml  pr-validation.yaml
scripts/: ingest-test-data.sh  setup-authored-rules-repo.sh  setup-enabled-rules-repo.sh  setup-test-repo.sh  teardown-test-repo.sh
src/dac/: __init__.py  cli.py  client.py  config.py  models.py
terraform/: elastic.tf  github.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_cli.py  test_models.py
